Sat Jul 27 01:26:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* NEWS: add changes of bigdecimal and bigdecimal/util.

Wed Jul 27 01:13:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/lib/bigdecimal/util.rb (Rational#to_d):
	  zero or negative precision is error.  fixes #5098.
	  [ruby-dev:44210]

	* ext/bigdecimal/lib/bigdecimal/util.rb (Float#to_d): modified for
	  specifying precision.  fixes #5098.  [ruby-dev:44210]

	* ext/bigdecimal/lib/bigdecimal/util.rb (Integer#to_d): added
	  for symmetry to BigDecimal() function with an Integer.
	  fixes #5098.  [ruby-dev:44210]

	* ext/bigdecimal/lib/bigdecimal/util.rb (BigDecimal#to_d): added
	  for adapting other Numeric subclasses.  [ruby-dev:44245]

	* test/bigdecimal/test_bigdecimal_util.rb: add tests for the above
	  changes.

Wed Jul 27 00:54:38 2011  Kenta Murata  <mrkn@mrkn.jp>

	* bigdecimal/bigdecimal.c (VpDup) a new function for duplicating
	  a BigDecimal.

	* bigdecimal/bigdecimal.c (BigDecimal_new): support generating a new
	  BigDecimal from another BigDecimal using BigDecimal global function
	  or constructor.  [ruby-dev:44245]

Mon Jul 25 22:24:09 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* backport r32666 from trunk.

	* lib/xmlrpc/client.rb: Fix possible HTTP header formatting failure by
	  'Basic' header. Long username caused the base64 String truncation in
	  HTTP header which is not allowed. See #5046.

	* test/xmlrpc/test_webrick_server.rb: test it.

Mon Jul 25 15:36:07 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/openssl/lib/openssl/{x509.rb,ssl.rb}: Add deprecation warning
	  for openssl/{x509,ssl} usage. Users should require "openssl" instead
	  of "openssl/ssl" and "openssl/x509". Start of transition period
	  introduced by [ruby-dev:38018].

Mon Jul 25 13:50:33 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* backport r32662 from trunk.

	* ext/openssl/lib/openssl/x509.rb: Cosmetic change: move definition
	  introduced in r30152 to x509-internal.rb.
